--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -759,13 +759,13 @@
     "heading2": "٢. المعلومات التي نجمعها",
     "section2": "نجمع:\n١. البيانات المقدمة من المستخدم: الاسم، البريد الإلكتروني، رقم الهاتف، تفاصيل الملف الشخصي، الرسائل، التقييمات.\n٢. بيانات الاستخدام: عنوان IP، نوع الجهاز، نظام التشغيل، سجلات الاستخدام.\n٣. بيانات الموقع: إذا سُمح، لتمكين المطابقة المحلية.\n٤. وثائق الهوية الشخصية: بطاقات الهوية، جوازات السفر، رخص القيادة، الشهادات، المقدمة طوعياً للتحقق من هوية المستخدم أو المؤهلات.",
     "heading3": "٣. استخدام المعلومات",
-    "section3": "تستخدم بياناتك لـ:• تشغيل وتحسين التطبيق• تسهيل المطابقة والمراسلة والتنسيق• التحقق من أوراق اعتماد المستخدم عند الضرورة• منع الاحتيال أو الإساءة• الامتثال للطلبات القانونية من السلطات البحرينية",
+    "section3": "تستخدم بياناتك لـ:\n• تشغيل وتحسين التطبيق\n• تسهيل المطابقة والمراسلة والتنسيق\n• التحقق من أوراق اعتماد المستخدم عند الضرورة\n• منع الاحتيال أو الإساءة\n• الامتثال للطلبات القانونية من السلطات البحرينية",
     "heading4": "٤. مشاركة البيانات",
-    "section4": "قد نشارك معلوماتك مع:• مقدمي الخدمات (مثل الاستضافة، التحليلات، الاتصالات، معالجات الدفع) في إطار اتفاقيات السرية• المستخدمين الآخرين، حسب الضرورة لتقديم الخدمات• السلطات القانونية، عندما يتطلب القانون البحريني ذلك نحن لا نبيع أو نؤجر بياناتك الشخصية.",
+    "section4": "قد نشارك معلوماتك مع:\n• مقدمي الخدمات (مثل الاستضافة، التحليلات، الاتصالات، معالجات الدفع) في إطار اتفاقيات السرية\n• المستخدمين الآخرين، حسب الضرورة لتقديم الخدمات\n• السلطات القانونية، عندما يتطلب القانون البحريني ذلك\n\nنحن لا نبيع أو نؤجر بياناتك الشخصية.",
     "heading5": "٥. الاحتفاظ بالبيانات",
     "section5": "نحتفظ بالبيانات فقط حسب الضرورة لتقديم الخدمات، والامتثال للالتزامات القانونية، وحل النزاعات، أو إنفاذ شروطنا. قد يتم الاحتفاظ بمعلومات الحساب المحذوف إذا كان مطلوباً بموجب القانون.",
     "heading6": "٦. حقوقك",
-    "section6": "يمكنك:• الوصول إلى بياناتك الشخصية وتحديثها• طلب حذف حسابك وبياناتك• سحب الموافقة على معالجة بيانات معينة (مما قد يحد من الوصول للميزات)قدم الطلبات باستخدام قنوات الدعم داخل التطبيق.",
+    "section6": "يمكنك:\n• الوصول إلى بياناتك الشخصية وتحديثها\n• طلب حذف حسابك وبياناتك\n• سحب الموافقة على معالجة بيانات معينة (مما قد يحد من الوصول للميزات)\n\nقدم الطلبات باستخدام قنوات الدعم داخل التطبيق.",
     "heading7": "٧. الأمان",
     "section7": "نستخدم تدابير تقنية وتنظيمية موثوقة لحماية بياناتك. ومع ذلك، لا يوجد نظام منيع. بتقديم المستندات الشخصية، فإنك تقبل أن تاسك غير مسؤول عن الوصول غير المصرح به أو الإساءة خارج سيطرتنا.",
     "heading8": "٨. خصوصية الأطفال",
