--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -167,7 +167,7 @@
   },
   "clientMyTasks": {
     "pending": "قيد الانتظار",
-    "started": "التنفيذ",
+    "started": "قيد التنفيذ",
     "completed": "مكتمل",
     "cancelled": "ملغي",
     "previous": "المهام السابقة",
