Fix Arabic translation for client messages empty state screen

--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -155,7 +155,9 @@
   "clientMessages": {
     "title": "الرسائل",
     "placeholder": "لا توجد رسائل بعد",
-    "search": "البحث"
+    "search": "البحث",
+    "emptyTitle": "لا توجد رسائل بعد",
+    "emptySubtitle": "ابدأ المحادثات مع المختصين من خلال نشر المهام وقبول العروض!"
   },
   "clientPayments": {
     "title": "مدفوعاتي",
