--- a/i18n/locales/ar.json
+++ b/i18n/locales/ar.json
@@ -210,6 +210,8 @@
   "clientNotifications": {
     "title": "الإشعارات",
     "none": "ليس لديك إشعارات.",
+    "emptyTitle": "لا توجد إشعارات بعد",
+    "emptySubtitle": "ستتلقى إشعارات حول العروض والرسائل وتحديثات المهام هنا.",
     "taskHired": "تم اختيارك!",
     "taskHiredDesc": "قام العميل بإختيارك للمهمة.",
     "newMessage": "لديك رسالة جديدة",
@@ -653,6 +655,8 @@
   "taskerNotifications": {
     "title": "الإشعارات",
     "empty": "لا توجد اشعارات حالياً.",
+    "emptyTitle": "لا توجد إشعارات بعد",
+    "emptySubtitle": "ستتلقى إشعارات حول العروض والرسائل وتحديثات المهام هنا.",
     "types": {
       "hired": "تم توظيفك",
       "message": "رسالة جديدة"
